
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef scalar_t__ ULONG ;
struct TYPE_4__ {int Base; int ImageName; } ;
typedef scalar_t__* PULONG ;
typedef scalar_t__ PUCHAR ;
typedef TYPE_1__* PSYSTEM_MODULE_INFORMATION ;


 int GetProcessHeap () ;
 int HEAP_NO_SERIALIZE ;
 int HEAP_ZERO_MEMORY ;
 scalar_t__ HeapAlloc (int ,int ,scalar_t__) ;
 int HeapFree (int ,int ,TYPE_1__*) ;
 scalar_t__ NtQuerySystemInformation (int ,TYPE_1__*,scalar_t__,scalar_t__*) ;
 int RtlNtStatusToDosError (scalar_t__) ;
 scalar_t__ STATUS_INFO_LENGTH_MISMATCH ;
 scalar_t__ STATUS_SUCCESS ;
 scalar_t__ StrStr (int ,char*) ;
 int SystemModuleInformation ;
 int printf (char*,scalar_t__,int) ;

ULONG GetWin32kBase()
{
 ULONG i, Count, Status, BytesRet;
 PSYSTEM_MODULE_INFORMATION pSMI;

 Status=NtQuerySystemInformation(SystemModuleInformation, pSMI, 0, &BytesRet);
 if(Status!=STATUS_INFO_LENGTH_MISMATCH)
  printf("Error with NtQuerySystemInformation : 0x%x : %d \n", Status, RtlNtStatusToDosError(Status));

 pSMI=(PSYSTEM_MODULE_INFORMATION)HeapAlloc(GetProcessHeap(), HEAP_ZERO_MEMORY, BytesRet);

 Status=NtQuerySystemInformation(SystemModuleInformation, pSMI, BytesRet, &BytesRet);

 if(Status!=STATUS_SUCCESS)
  printf("Error with NtQuerySystemInformation : 0x%x : %d \n", Status, RtlNtStatusToDosError(Status));







 Count=*(PULONG)pSMI;
 pSMI=(PSYSTEM_MODULE_INFORMATION)((PUCHAR)pSMI+4);

 for(i=0; i<Count; i++)
 {
  if(StrStr((pSMI+i)->ImageName, "win32k.sys"))
   return (ULONG)(pSMI+i)->Base;
 }

 HeapFree(GetProcessHeap(), HEAP_NO_SERIALIZE, pSMI);

 return 0;
}
